fix dark mode issues and Read in excerpt

--- a/src/components/Sidebar/Switcher/Switcher.module.scss
+++ b/src/components/Sidebar/Switcher/Switcher.module.scss
@@ -9,7 +9,7 @@
   height: 30px;
 
   &__text {
-    margin-right: 10px;
+    // margin-right: 10px;
   }
 
   &__container {
